# DS-DPV

./: README.md  pyproject.toml
Assignment1/: assignment1.md  main.ipynb
Assignment2/: main.ipynb
Assignment2/output/: customer.csv  product.csv  sales.csv
Assignment3/: main.ipynb
Assignment3/output/: customers.csv
DM/: births.py  main.py  pyproject.toml
DPV/: pyproject.toml
DPV/Assignment1/: assignment1.md
DPV/Assignment2/: main.ipynb
DPV/Assignment2/output/: customer.csv  product.csv  sales.csv
DPV/Assignment3/: main.ipynb  main.py
Project/: README.md  notes  preprocess_university.py  pyproject.toml  split.py  sql.py  test.csv  university.py
Project/data/: UT_courses_Osiris_with_teacher_2013-2014.csv  UT_courses_Osiris_with_teacher_2013-2014.xlsx  UT_courses_Osiris_with_teacher_2014-2015.xlsx  overview of programs and abbreviations.xlsx
Project/data/saxion/: activities_sample.csv
Project/data/utwente/: activities.parquet  activities_SUBSET_1000.parquet  activities_SUBSET_10000.parquet  teachers.csv  teachers.parquet  teachers_SUBSET_1000.parquet
Project/data_sample/utwente/: teachers.csv
Project/rawdata/utwente/: course_teachers_2014-2015.csv  programs_abbreviations.csv  teachers_2015.csv  teachers_2016.csv
Project/src/: OLD_UTWENTE.py  preprocess_saxion.py  preprocess_utwente.py  queries.py  split.py  temp.csv  visualize_saxion.py  visualize_utwente.py
Project/src/preprocess/: preprocess_saxion.py  preprocess_utwente.py
Project/src/visualize/: saxion.py  utwente.py
Project/src/visualize/utils/: OLDqueries.py  activities.py  class_size_type.py  data.py  room.py  teacher.py  utwente_utils.py
(+4 files in other folders)
