[tool.poetry]
name = "dm"
version = "0.1.0"
description = ""
authors = ["ICheered <tjeerd992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
statsmodels = "^0.13.5"
pyreadstat = "^1.2.1"
scikit-learn = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
