[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["ICheered <tjeerd992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
pandasql = "^0.7.3"
pyarrow = "^11.0.0"
ipykernel = "^6.22.0"
fastparquet = "^2023.2.0"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
